# DiabolicalDelegates

./: CMakeLists.txt  README.md  diabolical_delegates.cpp
include/DiabolicalDelegates/: CMakeLists.txt  Delegate.hpp  Event.hpp  FunctorDelegate.hpp  MemberDelegate.hpp  MultiEvent.hpp
